Introduce endpoint to maintain extension